Fixed search alignment

--- a/src/components/github/Common/searching/search.css
+++ b/src/components/github/Common/searching/search.css
@@ -2,7 +2,7 @@
     background-color: #222222;
     border-radius: 10px;
     min-height: 70px;
-    padding: 10px;
+    padding: 3px 10px 10px;
 }
 
 .label {
@@ -15,6 +15,7 @@
 
 .search-btn {
     height: 40px;
+    width: 33%;
 }
 
 input {
@@ -22,9 +23,11 @@ input {
     padding: 6px 10px;
     margin: 5px;
     height: 40px;
+    width: 33%;
 }
 
 .sorting-container {
+    width: 33%;
     height: 40px;
     color: black;
 }
